--- a/A1/index.html
+++ b/A1/index.html
@@ -55,16 +55,21 @@
       color: inherit;
     }
 
-    h1, h2, h3, h4 {
+    h1, h2{
       text-align: center;
       margin: 0;
       margin-bottom: 2rem;
+    }
+
+    footer {
+      padding: 4rem 0 1rem 0;
+      text-align: center;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="./pics/Logo.svg" alt="Jahreszeiten">
+    <img src="./Logo.svg" alt="Jahreszeiten">
   </header>
 
   <nav>
@@ -76,13 +81,18 @@
 
   <hr>
 
-
   <main>
     <section id="Herbst">
       <h2>🍂 Herbst</h2>
       <img src="./pics/annie-spratt-epcsn8Ed8kY-unsplash.png" alt="Herbstblätter">
-      <p>Der Herbst ist die Jahreszeit der warmen Farben, heißen Tees und gemütlichen Abenden am Kamin.
-      </p>
+      <p>Der Herbst ist die Jahreszeit der warmen Farben, heißen Tees und gemütlichen Abenden am Kamin.</p>
+      
+      <p>Dinge, die man im Herbst so machen kann:</p>
+      <ul>
+        <li>Tee trinken, während es draußen in Strömen gießt.</li>
+        <li>Kastanienmännchen bauen.</li>
+        <li>Endlich Stricken lernen.</li>
+      </ul>
     </section>
 
     <hr>
@@ -92,11 +102,17 @@
       <img src="./pics/remi-walle-Ui3bOgnjtl0-unsplash.png" alt="Grüne Blätter im Gegenlicht">
       <p>Der Frühling für viele die schönste Jahreszeit, da das Blühen der Blüten eines der befreiendsten Gefühle nach einem harten, kalten Winter sein kann.</p>
       <img src="./pics/lera-freeland-9MVVXa5BzlY-unsplash.png" alt="Sprossen eines Glücksbaums">
+      <p>Eines meiner Lieblingszitate zum Frühling:</p>
+      <p>
+        Alles freuet sich und hoffet,<br>
+        wenn der Frühling sich erneut. <br>
+        <cite>- Friedrich Schiller (1759–1805)</cite>
+      </p>
     </section>
-
-    
   </main>
-
+  <footer>
+    &copy2020 Malte Janßen (908287) - <a target="_blank" href="https://malts.me" rel="noopener noreferrer">malts.me</a> - <a target="_blank" href="https://github.com/SkyGuardian42/WebEngineering"  rel="noopener noreferrer">GitHub</a>
+  </footer>
 
 </body>
 </html>
