--- a/A2/index.html
+++ b/A2/index.html
@@ -6,11 +6,13 @@
   <title>Aufgabe 1: HTML5: semantisches Dokument</title>
 
   <style>
-  * {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    scroll-margin: 3rem 0 0 0;
-  }
+    /* ⚙️ Generelles */
+
+    * {
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+      scroll-margin: 3rem 0 0 0;
+    }
 
     body {
       max-width: 820px;
@@ -21,7 +23,6 @@
     }
 
     section {
-      /* min-height: 100vh; */
       padding: 2rem 0;
     }
 
@@ -33,6 +34,14 @@
       padding: 2rem 0;
       width: 100%;
     }
+
+    h1, h2, h3, h4 {
+      text-align: center;
+      margin: 0;
+      margin-bottom: 2rem;
+    }
+
+    /* 🗺️ Navigation */
 
     nav {
       margin: 2rem 0;
@@ -55,11 +64,9 @@
       color: inherit;
     }
 
-    h1, h2, h3, h4 {
-      text-align: center;
-      margin: 0;
-      margin-bottom: 2rem;
-    }
+
+    /* 🗳️ Formulare */
+     
 
     form .input:not(:last-child) {
       margin-bottom: 1rem;
