--- a/A1/index.html
+++ b/A1/index.html
@@ -111,7 +111,7 @@
     </section>
   </main>
   <footer>
-    &copy2020 Malte Janßen (908287) - <a target="_blank" href="https://malts.me" rel="noopener noreferrer">malts.me</a> - <a target="_blank" href="https://github.com/SkyGuardian42/WebEngineering"  rel="noopener noreferrer">GitHub</a>
+    &copy;2020 Malte Janßen (908287) - <a target="_blank" href="https://malts.me" rel="noopener noreferrer">malts.me</a> - <a target="_blank" href="https://github.com/SkyGuardian42/WebEngineering"  rel="noopener noreferrer">GitHub</a>
   </footer>
 
 </body>
