--- a/A3/index.html
+++ b/A3/index.html
@@ -1,104 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aufgabe 2: HTML5: Formulare</title>
+  <title>Aufgabe 3: CSS3: Einheiten, Farben, Boxmodel</title>
+  <link href="https://fonts.googleapis.com/css2?family=Sora&display=swap" rel="stylesheet">
 
-  <style>
-    /* ⚙️ Generelles */
-
-    * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-      scroll-margin: 3rem 0 0 0;
-    }
-
-    body {
-      max-width: 820px;
-      margin: 0 auto;
-      font-family: monospace;
-      line-height: 1.6;
-      padding: 0 10px;
-    }
-
-    section {
-      padding: 2rem 0;
-    }
-
-    img {
-      max-width: 100%;
-    }
-
-    header img {
-      padding: 2rem 0;
-      width: 100%;
-    }
-
-    h1, h2, h3, h4 {
-      text-align: center;
-      margin: 0;
-      margin-bottom: 2rem;
-    }
-
-    /* 🗺️ Navigation */
-
-    nav {
-      margin: 2rem 0;
-      position: sticky;
-      top: 0;
-      padding: 1rem;
-      background: white;
-    }
-
-    nav ul {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav a {
-      color: inherit;
-    }
-
-
-    /* 🗳️ Formulare */     
-
-    form .input:not(:last-child) {
-      margin-bottom: 1rem;
-    }
-
-    input[type=text], input[type=email] {
-      font-family: inherit;
-      width: 100%;
-      padding: .5rem;
-    }
-
-    input[type=submit], input[type=reset] {
-      float: right;
-      padding: .8rem 1rem;
-      font-family: inherit;
-      border: 1px solid black;
-      -webkit-appearance: none;
-      margin-left: 1rem;
-    }
-
-    input[type=reset] {
-      background: #eecac4;
-    }
-
-    input[type=submit] {
-      background: #c3dbb8;
-    }
-
-    footer {
-      padding: 4rem 0 1rem 0;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <header>
